[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Actors/Player/PlayersSprite.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Player/Player_Sheet_Color.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Gun/Gun_Sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/Player/singleShot.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/Player/reload.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/Player/hurt.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 5, 4 ), Vector2( 6, 4 ), Vector2( 7, 4 ), Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ), Vector2( 4, 5 ), Vector2( 5, 5 ), Vector2( 6, 5 ), Vector2( 7, 5 ), Vector2( 0, 6 ), Vector2( 1, 6 ), Vector2( 2, 6 ), Vector2( 3, 6 ), Vector2( 4, 6 ), Vector2( 5, 6 ), Vector2( 6, 6 ), Vector2( 7, 6 ), Vector2( 0, 7 ), Vector2( 1, 7 ), Vector2( 2, 7 ), Vector2( 3, 7 ), Vector2( 4, 7 ), Vector2( 5, 7 ), Vector2( 6, 7 ), Vector2( 7, 7 ), Vector2( 0, 8 ), Vector2( 1, 8 ), Vector2( 2, 8 ), Vector2( 3, 8 ), Vector2( 4, 8 ), Vector2( 5, 8 ), Vector2( 6, 8 ), Vector2( 7, 8 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0276718,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175, 0.2, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ), Vector2( 6, 0 ), Vector2( 7, 0 ), Vector2( 5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ), Vector2( 6, 1 ), Vector2( 7, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("GunSheet:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ), Vector2( 6, 1 ), Vector2( 7, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "reload"
length = 0.6
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.2,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunSheet:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 3, 2 ), Vector2( 4, 2 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("GunSheet:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075, 0.1, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 5, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.950974,
"start_offset": 0.06,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[node name="PlayersSprite" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 9
hframes = 8

[node name="GunSheet" type="Sprite" parent="."]
position = Vector2( 12, 3 )
texture = ExtResource( 3 )
vframes = 3
hframes = 8
frame = 16

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
anims/death = SubResource( 1 )
anims/hurt = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="GunAnimation" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 5 )
anims/reload = SubResource( 6 )
anims/shoot = SubResource( 7 )
